fixed registry generation